--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ h2 {
     background-color: #12DADE;
     color: white;
     text-shadow: 3px 3px 6px rgba(0, 0, 0, 0.226);
+    transition: 0.3s;
 }
 
 .servicos {
@@ -49,6 +50,7 @@ h2 {
 
 .imgParceiros:hover{
     width: 260px;
+    transition: 0.3s;
 }
 
 .descricao {
